# jetsonsvr

./: .gitignore  CMakeLists.txt  README_jetsonsvr.txt
shm_jetson_status/: CMakeLists.txt  README.txt
shm_jetson_status/src/: shmJetsonStatus.cpp  shmJetsonStatus.h  test-reader.cpp  test-writer.cpp
src/: Jetson-COM-DATA.hpp  Tool.cpp  Tool.hpp  UdpReceiver2.cpp  UdpReceiver2.hpp  UdpSender.cpp  UdpSender.hpp  jetsonsvr.cpp  test-command.cpp  test-viewer.cpp
